--- a/src/components/blocks/CaseStudiesBlock.astro
+++ b/src/components/blocks/CaseStudiesBlock.astro
@@ -257,8 +257,8 @@ const { cfg, section } = Astro.props as { cfg: SiteConfig; section: any };
                =================================================== */
             if (player.requestFullscreen) {
               player.requestFullscreen().then(() => {
-                if (screen.orientation && screen.orientation.lock) {
-                  screen.orientation.lock('landscape').catch(() => {});
+                if (screen.orientation && (screen.orientation as any).lock) {
+                  (screen.orientation as any).lock('landscape').catch(() => {});
                 }
               }).catch(() => {});
             }
